<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.neu.hinf5300.concussionsidelineresponse.measurementInstructions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measurement_title"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measurement_instructions"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height = "300dp"
        android:src = "@drawable/measurement"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        android:id="@+id/continue_measurement_button"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        style="@style/ButtonStyle"/>

</LinearLayout>
